--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<version>8.0.17</version>
 		</dependency>
 		<dependency>
+           <groupId>javax.mail</groupId>
+           <artifactId>mail</artifactId>
+           <version>1.4.3</version>
+       </dependency>
+		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
